@@ -14,6 +14,8 @@ Yosys 0.17 .. Yosys 0.17-dev
       the remaining cases
     - Fixed size and signedness computation for expressions containing array
       querying functions
+    - Fixed size and signedness computation of functions used in ternary
+      expressions or case item expressions
 
 Yosys 0.16 .. Yosys 0.17
 --------------------------
